fix height of tiles on mobile

--- a/src/assets/scss/components/_tiles.scss
+++ b/src/assets/scss/components/_tiles.scss
@@ -325,7 +325,7 @@
 				width: 100%;
 				height: auto;
 				max-height: none;
-				min-height: none;
+				min-height: 100vw;
 				
 				&:nth-of-type(3n+1) {
 					.image.glyph {
